@@ -15,6 +15,7 @@ PrestashopConsole 1.6.3
 * [`analyze:carriers`](#analyzecarriers)
 * [`analyze:global`](#analyzeglobal)
 * [`analyze:payments`](#analyzepayments)
+* [`analyze:tables:size`](#analyzetablessize)
 * [`analyze:website`](#analyzewebsite)
 
 **cache:**
@@ -724,6 +725,91 @@ List all payments modules on the website
 List all payments modules on the website
 
 ### Options
+
+#### `--help|-h`
+
+Display this help message
+
+* Accept value: no
+* Is value required: no
+* Is multiple: no
+* Default: `false`
+
+#### `--quiet|-q`
+
+Do not output any message
+
+* Accept value: no
+* Is value required: no
+* Is multiple: no
+* Default: `false`
+
+#### `--verbose|-v|-vv|-vvv`
+
+Increase the verbosity of messages: 1 for normal output, 2 for more verbose output and 3 for debug
+
+* Accept value: no
+* Is value required: no
+* Is multiple: no
+* Default: `false`
+
+#### `--version|-V`
+
+Display this application version
+
+* Accept value: no
+* Is value required: no
+* Is multiple: no
+* Default: `false`
+
+#### `--ansi`
+
+Force ANSI output
+
+* Accept value: no
+* Is value required: no
+* Is multiple: no
+* Default: `false`
+
+#### `--no-ansi`
+
+Disable ANSI output
+
+* Accept value: no
+* Is value required: no
+* Is multiple: no
+* Default: `false`
+
+#### `--no-interaction|-n`
+
+Do not ask any interactive question
+
+* Accept value: no
+* Is value required: no
+* Is multiple: no
+* Default: `false`
+
+`analyze:tables:size`
+---------------------
+
+Analyze the size of the database tables sorted by size
+
+### Usage
+
+* `analyze:tables:size [--limit [LIMIT]]`
+
+Analyze the size of the database tables sorted by size
+
+### Options
+
+#### `--limit`
+
+Limit to the number of tables
+
+* Accept value: yes
+* Is value required: no
+* Is multiple: no
+* Default: `NULL`
 
 #### `--help|-h`
 
